--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -2,7 +2,23 @@
     "compilerOptions": {
         "experimentalDecorators": true,
         "baseUrl": ".",
-        "paths": {}
+        "paths": {
+            "c/customerList": [
+                "customerList/customerList.js"
+            ],
+            "c/customerTile": [
+                "customerTile/customerTile.js"
+            ],
+            "c/inlineMessage": [
+                "inlineMessage/inlineMessage.js"
+            ],
+            "c/pubsub": [
+                "pubsub/pubsub.js"
+            ],
+            "c/reservationHelper": [
+                "reservationHelper/reservationHelper.js"
+            ]
+        }
     },
     "include": [
         "**/*",
